Minor changes made.

--- a/css/main.css
+++ b/css/main.css
@@ -79,14 +79,11 @@ h1 {
 
 .newClass {
  margin: 5px 0;
- border: .5px dashed grey;
- display:flex;
+ border-top: .5px dashed grey;
+  border-bottom: .5px dashed grey;
+ display: flex;
  justify-content: flex-start;
  align-items: center;
-
- background: #C9D6FF;  /* fallback for old browsers */
- background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
- background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .image {
@@ -103,10 +100,10 @@ h1 {
 
 .textArea h2 {
   line-height: 22px;
-  color: #6c6c6c;
   margin-bottom: 8px;
 }
 
 .textArea p {
   line-height: 18px;
+  color: #6c6c6c;
 }
